# axion

./: Cargo.toml  LICENSE  README.md
benches/: series_apply_benchmark.rs
examples/: dataframe.rs  example.rs  example0.rs  example1.rs  series.rs
src/: dtype.rs  error.rs  lib.rs
src/dataframe/: core.rs  groupby.rs  macros.rs  mod.rs  types.rs
src/io/: csv.rs  mod.rs
src/series/: core.rs  interface.rs  list.rs  mod.rs  ops.rs  string.rs
tests/: main.rs  series.rs
tests/dataframe/: core.rs  groupby.rs  mod.rs
tests/io/: csv.rs
tests/series/: core.rs
