[package]
name = "axion-data"
version = "0.1.1"
edition = "2021"
description = "A high-performance data processing library written in Rust, providing DataFrame and Series functionality similar to pandas"
license = "MIT"
documentation = "https://docs.rs/axion-data"
homepage = "https://github.com/StaRainorigin/axion"
repository = "https://github.com/StaRainorigin/axion"
readme = "README.md"
keywords = ["dataframe", "data-science", "analytics", "pandas", "statistics"]
categories = ["data-structures", "science", "development-tools"]
authors = ["StaRainorigin <StaRainorigin@outlook.com>"]

[dependencies]
num-traits = "0.2"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
csv = "1.3"
tempfile = "3.20.0"
rayon = "1.8"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "series_apply_benchmark"
harness = false